<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2pt"
    android:background="@drawable/my_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="205pt">
    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="21pt"
        android:text="@string/nome"
        android:layout_alignEnd="@id/textEnd"
        android:textColor="#000"
        android:layout_marginTop="10pt"
        android:paddingRight="4pt"
        android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/editNome"
        android:layout_width="110pt"
        android:layout_height="wrap_content"
        android:textSize="45px"
        android:inputType="text"
        android:background="@drawable/my_bg"
        android:digits="@string/digits"
        android:layout_marginTop="10pt"
        android:layout_toRightOf="@id/textNome"
        />
    <ImageButton
        android:id="@+id/scan1"
        android:background="@drawable/ic_scan1"
        android:layout_width="match_parent"
        android:layout_height="21pt"
        android:layout_toRightOf="@id/editNome"
        android:layout_marginTop="10pt"/>
    <TextView
        android:id="@+id/textIdade"
        android:layout_width="wrap_content"
        android:layout_height="21pt"
        android:textColor="#000"
        android:text="@string/idade"
        android:paddingRight="4pt"
        android:layout_marginTop="20pt"
        android:layout_alignEnd="@id/textEnd"
        android:layout_below="@id/textNome"
        android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/editIdade"
            android:layout_width="110pt"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textEnd"
            android:layout_toEndOf="@+id/textIdade"
            android:background="@drawable/my_bg"
            android:digits="@string/numbers"
            android:inputType="number"
            android:textSize="45px" />
    <ImageButton
        android:id="@+id/scan2"
        android:background="@drawable/ic_scan1"
        android:layout_width="match_parent"
        android:layout_height="21pt"
        android:layout_marginTop="20pt"
        android:layout_toRightOf="@id/editIdade"
        android:layout_below="@id/textNome"/>
    <TextView
        android:id="@+id/textEnd"
        android:layout_marginTop="20pt"
        android:layout_width="wrap_content"
        android:layout_height="21pt"
        android:textColor="#000"
        android:text="@string/end"
        android:paddingRight="4pt"
        android:layout_below="@id/textIdade"
        android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/editEnd"
        android:layout_width="110pt"
        android:layout_marginTop="20pt"
        android:textSize="45px"
        android:layout_height="wrap_content"
        android:background="@drawable/my_bg"
        android:layout_toRightOf="@id/textEnd"
        android:layout_below="@id/textIdade"/>
    <ImageButton
        android:id="@+id/scan3"
        android:layout_marginTop="20pt"
        android:background="@drawable/ic_scan1"
        android:layout_width="match_parent"
        android:layout_height="21pt"
        android:layout_toRightOf="@id/editEnd"
        android:inputType="text"
        android:layout_below="@id/textIdade"/>

    </RelativeLayout>
    <Button
        android:id="@+id/bSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="#FFF"
        android:text="@string/salvar"
        android:background="@color/colorPrimary"
        android:onClick="enviarForm"/>


</RelativeLayout>